[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ladder.gd" id=1]

[node name="Ladder" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="Title" type="Label" parent="VBox"]
text = "Ladder"

[node name="TeamLabel" type="Label" parent="VBox"]
text = "Team: (none)"

[node name="StatusLabel" type="Label" parent="VBox"]
text = ""

[node name="Buttons" type="HBoxContainer" parent="VBox"]

[node name="EditTeamButton" type="Button" parent="VBox/Buttons"]
text = "Edit Team"

[node name="FormationButton" type="Button" parent="VBox/Buttons"]
text = "Formation"

[node name="BattleButton" type="Button" parent="VBox/Buttons"]
text = "Battle"

[node name="BackButton" type="Button" parent="VBox"]
text = "Back"

[node name="Http" type="HTTPRequest" parent="."]
